kube/base/nifi/deployment.yaml
# https://hub.docker.com/r/apache/nifi
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec: 
      containers:
      - name: nifi-container
        image: "apache/nifi:2.4.0"
        imagePullPolicy: Always
        resources: 
          requests:
            cpu: "2000m"
            memory: "2Gi"
          limits:
            cpu: "4000m"
            memory: "4Gi"
            nvidia.com/gpu: "0"
        volumeMounts:
        - name: nifi-logs-pv
          mountPath: /opt/nifi/nifi-current/logs
        - name: nifi-content-pv
          mountPath: /opt/nifi/nifi-current/content-repository
      #   - name: nifi-flowfile-pv
      #     mountPath: /opt/nifi/nifi-current/flowfile-repository
      #   - name: nifi-db-pv
      #     mountPath: /opt/nifi/nifi-current/database-repository
      #   - name: nifi-provenance-pv
      #     mountPath: /opt/nifi/nifi-current/provenance-repository
        ports:
        - containerPort: 31000
          name: http-port
        - containerPort: 31001
          name: https-port
        - containerPort: 31011
          name: tcp-port1
        - containerPort: 31012
          name: tcp-port2
        - containerPort: 31013
          name: tcp-port3
        - containerPort: 31014
          name: tcp-port4
        - containerPort: 31021
          name: udp-port1
        - containerPort: 31022
          name: udp-port2
        - containerPort: 31023
          name: udp-port3
        - containerPort: 31024
          name: udp-port4
      volumes:
      - name: nifi-logs-pv
        persistentVolumeClaim: 
          claimName: nifi-logs-pvc
      - name: nifi-content-pv
        persistentVolumeClaim: 
          claimName: nifi-content-pvc
      # - name: nifi-flowfile-pv
      #   persistentVolumeClaim: 
      #     claimName: nifi-flowfile-pvc
      # - name: nifi-db-pv
      #   persistentVolumeClaim: 
      #     claimName: nifi-db-pvc
      # - name: nifi-provenance-pv
      #   persistentVolumeClaim: 
      #     claimName: nifi-provenance-pvc
